<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:layout_marginBottom="624dp"
        android:background="#4F80C0"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="หน้าหลัก"
            android:textSize="48sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="5dp"
            android:layout_height="71dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="ตระกร้าสินค้า" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginBottom="460dp"
        android:background="#FFFAFA"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/god_of_war" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/fnf_xvi" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/hw" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="428dp"
        android:background="#FFFAFA"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Game1"
                android:text="@string/God_of_War"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="11dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Game2"
                android:text="@string/FFXVI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="11dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Game3"
                android:text="@string/HW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="11dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="404dp"
        android:background="#FFFAFA"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Price1."
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="ราคา : 1,305.00"
                android:textSize="11dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Price2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="ราคา : 2,290.00"
                android:textSize="11dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Price3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="ราคา : 2,450.00"
                android:textSize="11dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginBottom="228dp"
        android:background="#FFFAFA"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/last_of_us01" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/gt7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/spider_man2" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="30dp"
        android:layout_marginBottom="196dp"
        android:background="#FFFAFA"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Game4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Last_of_Us"
                android:textSize="11dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Game5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/GT7"
                android:textSize="11dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Game6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/SM"
                android:textSize="11dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="172dp"
        android:background="#FFFAFA"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Price4."
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="ราคา : 2,290.00"
                android:textSize="11dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Price5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="ราคา : 2,290.00"
                android:textSize="11dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Price6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="ราคา : 2,290.00"
                android:textSize="11dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="4dp"
        android:background="#4F80C0"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="ผู้ใช้งาน" />

            <Button
                android:id="@+id/button3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="หน้าหลัก" />

            <Button
                android:id="@+id/button4"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="ประวัติการสั่งซื้อ" />

            <Button
                android:id="@+id/button5"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="ออกจากระบบ" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>